--- a/css/tooplate-barista.css
+++ b/css/tooplate-barista.css
@@ -670,14 +670,15 @@ strong {
 }
 
 .team-block-info {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.35), rgba(188, 108, 37, 1));
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 30px;
+  background-color: var(--primary-color); /* هذا سيستخدم اللون الأزرق الداكن المحدد في المتغيرات */
+  color: var(--white-color); /* للتأكد أن النص يظهر جيداً */
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 30px;
 }
 
 .team-block-info .badge {
@@ -1203,6 +1204,7 @@ strong {
     top: 13px;
   }
 }
+
 
 
 
